Modificado el Main (Solo diseño) Revisar el diseno_btn.xml ya que no funciona bien como dice el TODO en el Main

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,11 @@
     <string name="pass2">Introduzca de nuevo su contraseña</string>
     <string name="btnregistrarse">Registrarte</string>
 
+    <!--Stings de la MainActivity -->
+    <string name="btnAddHuevo">Añadir huevo</string>
+    <string name="btnComprobarHuevos">Mostrar huevos</string>
+    <string name="btnEliminarrHuevo">Eliminar huevo</string>
+    <string name="btnSalirSesion">Cerrar Sesion</string>
+
 </resources>
+
