Creadas las activitys del calendario y de mostrar huevos En mostrar anuncios queda mostrar un cardview (por ejemplo) de los huevos (un array de objetos huevo) y posteriormente la BD

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,5 +26,12 @@
     <string name="ColorHuevo">Color Huevo:</string>
     <string name="diametroAlturaHuevo">Altura Huevo:</string>
     <string name="diametroAnchoHuevo">Ancho Huevo:</string>
+
+    <!-- Activity Mostrar Huevos-->
+    <string name="titleBuscarHuevos">Que huevos buscas?</string>
+    <string name="txvDia">Dia</string>
+    <string name="btnCalendario">Indicar fecha</string>
+
+
 </resources>
 
